<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="titolo obbiettivo"
        android:textSize="@dimen/h1"
        android:textColor="@color/redPrimary"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0.3"
        android:id="@+id/button_week"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/redPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_month"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0.3"
        android:id="@+id/button_month"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/redPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/month"
        app:layout_constraintStart_toEndOf="@id/button_week"
        app:layout_constraintEnd_toStartOf="@+id/button_year"
        app:layout_constraintTop_toBottomOf="@+id/title"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0.3"
        android:id="@+id/button_year"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/redPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@+id/button_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_month" />

    <TextView
        android:id="@+id/description_objective"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="descrizone dell'obbiettivo vedere se va a campo giustamente senza creare casini"
        app:layout_constraintTop_toBottomOf="@id/lineChart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>